@@ -1,4 +1,8 @@
 2015-01-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ config/sample-headers/compiler/gcc-4.4/pqxx/config-internal-compiler.h,
+ configitems, configure.ac.in, include/pqxx/config.h.in:
+ - Remove detection of C99 nan(); no longer needed for workarounds.
+2015-01-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
  config/sample-headers/compiler/VisualStudio2010/pqxx/config-internal-compiler.h,
  config/sample-headers/compiler/gcc-4.4/pqxx/config-internal-compiler.h,
  configitems, configure.ac.in, include/pqxx/config.h.in, src/strconv.cxx,
